<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_summery">SummeryActivity</string>
    <string name="back"></string>
    <string name="send">Send!</string>
    <string name="plus">+</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="iconlog"></string>
    <string name="info_sub"> This research study explores the connections between multiple
        						aspects of human nutrition and health. We wish to use smartphones
        						to overcome the drawbacks of the traditional pen &amp;
        						paper food diary and identify eating patterns and dietary
        						factors that contribute to disease.</string>
    <string name="main_header">Salk Metabolic Study 2014</string>
    <string name="sub_header">Panda lab, Salk Institute, La Jolla, California</string>
    <string name="login_info">If you are enrolled in the Salk Metabolic Study and received
        						an access code, please sign in above.
        						If you wish to learn more, please visit our website below.
        						This is a research study that explores multiple aspects
        						of human nutrition and is conducted with approval from
        						the Institutional Review Board of the Salk Institute,
        						La Jolla.</string>
    <string name="info_notice">Important note: Please be advised that we collect information
        						about your geographical location.</string>
    <string name="bmi_info_notice">The body mass index (BMI), or Quetelet index, is a value derived from the mass (weight) and height of an individual. The BMI is defined as the body mass divided by the square of the body height, and is universally expressed in units of kg/m2, resulting from weight in kilograms and height in metres. (Refer: https://en.wikipedia.org/wiki/Body_mass_index).</string>
    <string name="bp_info_notice">Blood pressure (BP) is the pressure exerted by circulating blood upon the walls of blood vessels and is one of the principal vital signs. A person’s blood pressure is usually expressed in terms of the systolic (maximum) pressure over diastolic (minimum) pressure and is measured in millimeters of mercury (mm Hg). Normal resting blood pressure for an adult is approximately 120/80 mm Hg. (Refer: http://www.nhlbi.nih.gov/health/health-topics/topics/hbp)</string>
    <string name="bs_info_notice">The blood sugar concentration or blood glucose level is the amount of glucose (sugar) present in the blood of a human or animal. The body naturally tightly regulates blood glucose levels as a part of metabolic homeostasis. Many factors affect a person blood sugar level. (Refer: http://www.joslin.org/info/Goals-for-Blood-Glucose-Control.html)</string>
    <string name="sa_info_notice">Sleep is a naturally recurring state of mind characterized by altered consciousness, relatively inhibited sensory activity, inhibition of nearly all voluntary muscles, and reduced interactions with surroundings. (Refer: https://en.wikipedia.org/?title=Sleep)</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="previous"> &lt; Previous </string>
    <string name="greater">&gt;</string>
    <string name="title_activity_anthropometric">AnthropometricActivity</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <string name="AlarmNameInput">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-+ .</string>
    <string name="AlarmNameInput_slash">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-+ .\/,</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_diabetes">DiabetesActivity</string>
    <string name="title_activity_coordinator">CoordinatorActivity</string>
    <string name="title_activity_participant">ParticipantActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="degree">\u2109</string>
    <string name="bullet">\u2022</string>
    <string name="title_activity_new_food_log">NewFoodLog</string>
    <string name="title_activity_new_food_log_annotation">NewFoodLogAnnotationActivity</string>
    <string name="title_activity_activity_detector">ActivityDetectorActivity</string>
    <string name="getting_started">GETTING STARTED</string>
    <string name="how_to_videos">HOW TO VIDEOS</string>
    <string name="tips">TIPS</string>
    <string name="contact">CONTACT</string>
    <string name="faq">FAQS</string>
    <string name="When_should_I_sleep">When should I sleep?</string>
    <string name="When_should_I_exercise">When should I exercise?</string>
    <string name="How_much_should_I_exercise">How much should I exercise?</string>
    <string name="eating_interval_goal_be">What should my eating interval goal be?</string>
    <string name="What_are_the_health_benefits_of_eating">What are the health benefits of eating within an 8 to 12-hour interval?</string>
    <string name="If_I_restrict_my_food">If I restrict my food/drink intake to 8 to 12-hours, does it matter what I eat?</string>
    <string name="decided_on_an_eating_interval_goal">I’ve decided on an eating interval goal; what time of day should I eat?</string>
    <string name="Does_it_matter_when_I_eat">Does it matter when I eat certain foods?</string>
    <string name="How_long_do_I_need">How long do I need to use MyCircadianClock?</string>
    <string name="Can_I_sync_my_data">Can I sync my data from my phone or activity tracking device to the app?</string>
    <string name="Can_I_use_the_app_offline">Can I use the app offline?</string>
    <string name="What_is_the_correct_way">What is the correct way to add annotations?</string>
    <string name="Can_I_save_multiple_Food">Can I save multiple Food items at once?</string>
    <string name="Does_Caffeine_Count">Does Caffeine Count?</string>
    <string name="How_can_I_edit_an_annotation">How can I edit an annotation that I didn’t mean to select?</string>
    <string name="Can_I_delete_an_entry">Can I delete an entry that I didn’t mean to save?</string>
    <string name="Can_I_still_record_food">Can I still record food or drinks that I had earlier and forgot to record?</string>
    <string name="What_are_Self">What are Self-Determined Goals?</string>
    <string name="What_is_feedogram">What is a “feedogram”?</string>
    <string name="Why_cant_feedogram">Why can’t I see my feedogram?</string>
    <string name="What_are_the_marks">What are the marks in the Feedogram section?</string>
    <string name="How_do_sleep">How do I set sleep goals?</string>
    <string name="How_medicine_intake">How do I record my supplements or medicine intake?</string>
    <string name="Can_I_add_my_previous">Can I add my previous day\'s exercise log?</string>
    <string name="What_is_the_activity">What is the activity chart?</string>
    <string name="What_is_BMI">What is BMI? How do I calculate it?</string>
    <string name="What_is_BMI_chart">What is the BMI chart?</string>
    <string name="my_blood_sugar">How do I log my blood sugar?</string>
    <string name="blood_sugar_chart">What is the blood sugar chart?</string>
    <string name="Blood_Pressure">How do I record my Blood Pressure?</string>
    <string name="What_are_Systolic">What are Systolic and Diastolic?</string>
    <string name="Blood_Pressure_Data">How can I view my previously recorded Blood Pressure Data?</string>
    <string name="The_optimal_timing">The optimal timing and duration of sleep depends on each individual’s sleep needs, schedule, and internal biological rhythm. The amount of sleep needed changes across your lifespan, but for adults (18 years or older) it is suggested to get 7 to 9-hours of sleep per night. Please consult a doctor for sleep and health advice.</string>
    <string name="There_is_no_one_exact">There is no one exact time that you should or should not exercise. Here is some information you may want to keep in mind when you determine when and how much you plan to exercise:\n\n• There is a sharp rise in heart rate in the early morning (~6:45 am, this time will vary based on schedule) due to a peak in cortisol to help you wake up.\n\n• Muscles have the best coordination in the afternoon around 2:30 pm.\n\n• Muscles have the fastest reaction time around 3:30pm.\n\n• Cardiovascular efficiency and muscle strength is greatest around 5pm.\n\n• Blood pressure is highest around 6pm.\n\n• Exercise arouses the brain, so it is good to stop vigorous activity a few hours before you plan to sleep.</string>
    <string name="You_should_consult">You should consult a doctor about intensity, duration, frequency, and types of exercise that are best for you.\n\n The American Heart Association Recommendations are below.\n\nFor Overall Cardiovascular Health:\n\n• At least 30 minutes of moderate-intensity aerobic activity at least 5 days per week for a total of 150\n\nOR\n\n• At least 25 minutes of vigorous aerobic activity at least 3 days per week for a total of 75 minutes; or a combination of moderate- and vigorous-intensity aerobic activity\n\nAND\n\n• Moderate- to high-intensity muscle-strengthening activity at least 2 days per week for additional health benefits.\n\nFor Lowering Blood Pressure and Cholesterol:\n\n• An average 40 minutes of moderate- to vigorous-intensity aerobic activity 3 or 4 times per week</string>
    <string name="Have_a_question">Have a question or comment?</string>
    <string name="our_researcher">Contact one of our researcher</string>
    <string name="Subject">Subject</string>
    <string name="Subject_hint">Subject</string>
    <string name="Message">Message</string>
    <string name="SEND">SEND</string>
    <string name="CONTACT">CONTACT</string>
    <string name="research_use">This app is for research use. You will receive the access code after consenting for the research study. Go to</string>
    <string name="Enter_email">Enter email</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Enter_access_code">Enter access code</string>
    <string name="Forgot_your_access_code">Forgot your access code?</string>
    <string name="Resend">Resend</string>
    <string name="Clear">Clear</string>
    <string name="Close">Close</string>
    <string name="Enter_Excercise">-------Enter Excercise-------</string>
</resources>