<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#99e5ff"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/CONTACT"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="normal" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar_layout"
        android:gravity="center"
        android:layout_marginBottom="55dp">

        <Button
            android:id="@+id/btnSaveContact"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_below="@+id/etMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_save_btn"
            android:enabled="false"
            android:text="@string/SEND"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/textView4"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/textboxstylebgwhitewithborder"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/Message"
            android:inputType="textCapSentences|textMultiLine" />

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/textboxstylebgwhitewithborder"
            android:ems="10"
            android:hint="@string/Subject_hint"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/Have_a_question"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etSubject"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/Message"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/our_researcher"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/Subject"
            android:textSize="18sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"></RelativeLayout>

    <include
        android:id="@+id/tab_bar"
        layout="@layout/tabar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
