<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="55dp">

        <RelativeLayout
            android:id="@+id/action_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#99e5ff"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Information"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />
        </RelativeLayout>

        <Button
            android:id="@+id/getting_started_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#f2f2f2"
            android:padding="22dp"
            android:text="@string/getting_started"
            android:textColor="#191919"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:padding="22dp"
            android:text="@string/how_to_videos"
            android:textColor="#191919"
            android:textSize="25sp" />

        <Button
            android:id="@+id/faqs_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:padding="22dp"
            android:text="@string/faq"
            android:textColor="#191919"
            android:textSize="25sp" />

        <Button
            android:id="@+id/tips_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:padding="22dp"
            android:text="@string/tips"
            android:textColor="#191919"
            android:textSize="25sp" />

        <Button
            android:id="@+id/contact_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:background="#f2f2f2"
            android:padding="22dp"
            android:text="@string/contact"
            android:textColor="#191919"
            android:textSize="25sp" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"></RelativeLayout>

    <include
        android:id="@+id/tab_bar"
        layout="@layout/tabar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
