<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/send_item_agian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@color/bev_bg"
            android:padding="10dp"
            android:text="@string/Clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@color/Green"
            android:padding="10dp"
            android:text="@string/Resend"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allfoodwithcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_item_agian"
        android:layout_alignParentTop="true"></androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/close_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/Red"
            android:padding="10dp"
            android:text="@string/Close"
            android:textColor="@color/white" />
    </RelativeLayout>


</RelativeLayout>
