<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" 
   >
    
    <LinearLayout 
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/textboxstyleexcercise"
        android:weightSum="2"
        >
    
    <EditText 
        android:id="@+id/edit_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:hint="@string/Enter_Excercise"
        android:inputType="text|textCapWords"
        android:digits="@string/AlarmNameInput"
        android:layout_weight="1.6"
        android:layout_marginLeft="2dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/textboxstylebgwhitewithborder"
        android:textColor="#000000"
        android:cursorVisible="false"/>
    
    <Button
        android:id="@+id/add_items"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="@mipmap/add"
         />
    
    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_layout"
        android:layout_above="@+id/footer"
        >
        
    </androidx.recyclerview.widget.RecyclerView>
    
    
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <Button
            android:id="@+id/close_btn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/Red"
            android:textSize="17dp"
            android:text="@string/Close"
            android:textColor="@color/white"
             />
    </RelativeLayout>

</RelativeLayout>
